# cluster_snek

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  example-config.yaml  project-tracker.md  pyproject.toml  refactoring-guidance.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: docs.yml  release.yml  security-pipeline.yml  test.yml  update_branches.yml
cluster-snek/src/: cluster_snek.py
cluster-snek/tests/: test_cluster_snek.py  test_generate_project_structure.py
cluster_snek/cluster_snek/: __init__.py
cluster_snek/cluster_snek/commands/: generate.py
cluster_snek/cluster_snek/iac/: generate_secrets.py  keycloak-values.yaml
cluster_snek/deployment/: modes.py
cluster_snek/docs/: complete_documentation.md  migration_and_deployment_guides.md  project_summary_conclusion.md
cluster_snek/generators/: generator.py  iam.py  infrastructure.py  vector_store.py.py
cluster_snek/iac/: generate_secrets.py  rbac-policies.yaml
cluster_snek/utils/: source_manager.py
deployment/: modes.py
docs/: migration_and_deployment_guides.md
docs/api/: README.md
docs/examples/: airgapped.yaml  minimal_dev.yaml  production.yaml
docs/guides/: getting_started.md
examples/: example_configurations.yaml
src/: cluster_snek.py
tests/: conftest.py  test_cluster_snek.py  test_end_to_end.py  test_env_file.py  test_project_structure.py  test_user_settings.py
