[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster-snek"
version = "0.1.1"
description = "Professional-grade Kubernetes GitOps automation with comprehensive deployment modes"
requires-python = ">=3.12"
dependencies = ["PyYAML", "GitPython"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
cluster-snek = "cluster_snek.cluster_snek:main"
